<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_container_one"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/warningNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/cal_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- 日付のTextViewとCalendarView -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/date_label"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/cal_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/warningNote"
        app:startIconDrawable="@drawable/ic_baseline_calendar_month_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:clickable="false"
            android:inputType="date" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- DatePicker表示ボタン -->
    <ImageButton
        android:id="@+id/date_picker_actions"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:background="@color/white"
        android:contentDescription="DatePicker"
        android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
        app:layout_constraintBottom_toBottomOf="@id/date_label"
        app:layout_constraintEnd_toEndOf="@id/date_label"
        app:layout_constraintTop_toTopOf="@id/date_label"
        app:tint="@android:color/black" />

    <!-- 食べ物名のTextViewとEditText -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/food_label"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/food_input_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_label"
        app:startIconDrawable="@drawable/ic_baseline_fastfood_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/foodEditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:clickable="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- カロリーのTextViewとEditText -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cal_label"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/cal_input_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/food_label"
        app:startIconDrawable="@drawable/ic_baseline_scale_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/calEditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:clickable="false"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/line_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/display_line_title" />

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line_title"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        app:layout_constraintTop_toBottomOf="@id/line_title"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/cal007_updateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_button_text"
            app:icon="@drawable/ic_baseline_update_24"
            android:layout_margin="2dp"
            android:paddingStart="20dp"
            android:gravity="center"/>

        <Button
            android:id="@+id/cal007_deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_button_text"
            app:icon="@drawable/ic_baseline_delete_forever_24"
            android:backgroundTint="@color/red"
            android:layout_margin="2dp"
            android:gravity="center"/>

    </LinearLayout>

    <View
        android:id="@+id/line"
        android:background="?android:attr/listDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/button_layout"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/display_line_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/display_line_title2"
        app:layout_constraintTop_toBottomOf="@+id/line"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/cal007_addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_button_text"
        app:icon="@drawable/ic_baseline_add_24"
        app:layout_constraintTop_toBottomOf="@+id/display_line_title2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>