<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/dialog_top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- タイトル -->
        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/dialog_title"
            android:textSize="20sp" />

    </LinearLayout>

    <!-- ボタン -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_top_layout"
        android:orientation="horizontal">

        <Button
            android:id="@+id/positive_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:text="@string/dialog_positive_button"
            app:icon="@drawable/ic_baseline_save_as_24" />

        <Button
            android:id="@+id/negative_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:text="@string/dialog_negative_button"
            app:icon="@drawable/ic_baseline_arrow_back_24" />

    </LinearLayout>
</RelativeLayout>
