<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.calcalculation.activity.Cal002_BarcodeScanActivity">

    <TextView
        android:id="@+id/barcodeStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/barcode_status"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="35dp"/>

    <com.journeyapps.barcodescanner.CompoundBarcodeView
        android:id="@+id/barcodeView"
        android:layout_width="300dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barcodeStatus"
        android:layout_marginTop="20dp">
    </com.journeyapps.barcodescanner.CompoundBarcodeView>

    <View
        android:id="@+id/manualEntryText"
        android:background="?android:attr/listDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@+id/barcodeView"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/manualEntryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_warning_text"
        app:layout_constraintTop_toBottomOf="@+id/manualEntryText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/manualEntryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_button_text"
            app:layout_constraintTop_toBottomOf="@+id/manualEntryTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_centerHorizontal="true"
            android:textSize="30sp"
            android:layout_marginTop="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
