<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_container_one"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today"
            android:paddingStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:layout_alignParentTop="true"
            android:textStyle="bold"
            android:textSize="25sp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            app:cardUseCompatPadding="true"
            android:layout_margin="4dp"
            android:layout_below="@+id/day">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/icon_imageView"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="16dp"
                    app:srcCompat="@drawable/ic_baseline_home_24"
                    android:layout_gravity="center"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/user_profession_textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/total_cal_description"
                        android:textSize="14sp"
                        android:paddingTop="8dp"
                        android:textColor="@color/teal_200"
                        android:gravity="center"/>

                    <TextView
                        android:id="@+id/today_cal_textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/total_cal"
                        android:textSize="25sp"
                        android:textColor="@color/teal_200"
                        android:textStyle="bold"
                        android:paddingBottom="8dp"
                        android:gravity="center"/>

                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/inputButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:srcCompat="@drawable/ic_baseline_add_24"
            app:tint="@android:color/white"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

</FrameLayout>